hphp/hack/test/typecheck/missing_const_typehint.php.exp
File "missing_const_typehint.php", line 5, characters 9-9:
Please add a type hint (Naming[2035])
